--- a/templates/index.html
+++ b/templates/index.html
@@ -5,15 +5,31 @@
     <title>Unzip the file</title>
 </head>
 <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
-<body>
+<body><br><br>
+<div class="container">
+    <div class="row">
+        <div class="col-lg-12">
+            <center>
+                <h2>Unzip the file</h2>
+            </center>
+    </div>
+</div><br><br>
+<div class="container">
+    <div class="row">
+    <div class="col-lg-12">
+        <center>
 <form class="md-form" action="/uploadfile" method="post" enctype="multipart/form-data">
   <div class="file-field">
     <div class="file-path-wrapper">
       <input class="file-path validate" type="file" name="file" class="file-upload">
          <input class="file-path validate" type="submit" value="Upload"/>
+        </center>
     </div>
   </div>
+</div>
 </form>
+    </div>
+</div>
 </body>
 <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
